Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/Branding_Request__c.object-meta.xml
<CustomObject>
    <label>Branding Request</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Branding Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branding Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>