Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Shop_Name__r.City__c+&apos;,&apos;+&apos;&apos;+ text(Shop_Name__r.District__c)  +&apos;,&apos;+&apos;&apos;+ text(Shop_Name__r.State__c)</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>