Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/BDM_Email__c.field-meta.xml
<CustomField>
    <fullName>BDM_Email__c</fullName>
    <label>BDM Email</label>
    <type>Email</type>
</CustomField>