Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/BDM_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>BDM_Email_Formula__c</fullName>
    <description>This is a  RBM Email Formula field</description>
    <formula>Submitted_By__r.Branding_Team_Member__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDM Email Formula</label>
    <type>Text</type>
</CustomField>