Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/BH_Mobile__c.field-meta.xml
<CustomField>
    <fullName>BH_Mobile__c</fullName>
    <formula>Submitted_By__r.Branding_Manager__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BH_Mobile</label>
    <type>Text</type>
</CustomField>