Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Bhandhan_Check__c.field-meta.xml
<CustomField>
    <fullName>Bhandhan_Check__c</fullName>
    <formula>Shop_Name__r.Bandhan_Cutsomer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bhandhan Check</label>
    <type>Checkbox</type>
</CustomField>