Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Branding_Approved_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Branding_Approved_Rejected__c</fullName>
    <label>Branding Approved/Rejected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Submitted To TL</fullName>
            </value>
            <value>
                <fullName>Approved by TL</fullName>
            </value>
            <value>
                <fullName>Rejected by TL</fullName>
            </value>
            <value>
                <fullName>Escalated by  Head Branding</fullName>
            </value>
            <value>
                <fullName>Submitted To RBM</fullName>
            </value>
            <value>
                <fullName>Approved by RBM</fullName>
            </value>
            <value>
                <fullName>Rejected by RBM</fullName>
            </value>
            <value>
                <fullName>Escalated by RBM</fullName>
            </value>
            <value>
                <fullName>Submitted To Branding Head</fullName>
            </value>
            <value>
                <fullName>Approved By Branding Head</fullName>
            </value>
            <value>
                <fullName>Rejected By Branding Head</fullName>
            </value>
            <value>
                <fullName>Submitted To Vendor</fullName>
            </value>
            <value>
                <fullName>Approved By Vendor</fullName>
            </value>
            <value>
                <fullName>Rejected By Vendor</fullName>
            </value>
            <value>
                <fullName>Request Created</fullName>
            </value>
            <value>
                <fullName>Vendor Assigned-Rework</fullName>
            </value>
            <value>
                <fullName>Vendor Assigned-Completed</fullName>
            </value>
            <value>
                <fullName>Request Completed and Submitted</fullName>
            </value>
            <value>
                <fullName>Vendor Assigned</fullName>
            </value>
            <value>
                <fullName>Escalated to Branding Head</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>