Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Branding_Head__c.field-meta.xml
<CustomField>
    <fullName>Branding_Head__c</fullName>
    <formula>CASESAFEID( Submitted_By__r.Branding_Manager__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branding Head</label>
    <type>Text</type>
</CustomField>