Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Branding_Head_Name__c.field-meta.xml
<CustomField>
    <fullName>Branding_Head_Name__c</fullName>
    <formula>CreatedBy.Branding_Manager__r.FirstName</formula>
    <label>Branding Head Name</label>
    <type>Text</type>
</CustomField>