Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Branding_Installation__c.field-meta.xml
<CustomField>
    <fullName>Branding_Installation__c</fullName>
    <label>Branding Installation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Installed</fullName>
            </value>
            <value>
                <fullName>Partially Installed</fullName>
            </value>
            <value>
                <fullName>Not Installed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>