Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Branding_Manager__c.field-meta.xml
<CustomField>
    <fullName>Branding_Manager__c</fullName>
    <formula>$User.ManagerBranding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branding Manager</label>
    <type>Text</type>
</CustomField>