Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Branding_Products__c.field-meta.xml
<CustomField>
    <fullName>Branding_Products__c</fullName>
    <label>Branding Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Column</fullName>
            </value>
            <value>
                <fullName>All Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>