Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Branding_Request__c.field-meta.xml
<CustomField>
    <fullName>Branding_Request__c</fullName>
    <label>Branding Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Branding Requests</relationshipLabel>
    <relationshipName>Branding_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>