Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Branding_Sub_Products__c.field-meta.xml
<CustomField>
    <fullName>Branding_Sub_Products__c</fullName>
    <label>Branding Sub Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Branding_Products__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CPVC</fullName>
            </value>
            <value>
                <fullName>SWR</fullName>
            </value>
            <value>
                <fullName>Aqua Life</fullName>
            </value>
            <value>
                <fullName>Column Pipes</fullName>
            </value>
            <value>
                <fullName>V4</fullName>
            </value>
            <value>
                <fullName>Silent SWR</fullName>
            </value>
            <value>
                <fullName>UGD</fullName>
            </value>
            <value>
                <fullName>Pan Connector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>