Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Branding_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Branding_Sub_Type__c</fullName>
    <label>Branding Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Branding_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>One-way-Vision</fullName>
            </value>
            <value>
                <fullName>Vinyl on Sunboard</fullName>
            </value>
            <value>
                <fullName>Front lit Flex Board</fullName>
            </value>
            <value>
                <fullName>Vinyl</fullName>
            </value>
            <value>
                <fullName>Back lit board (GSB)</fullName>
            </value>
            <value>
                <fullName>Vehicle Branding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>