Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Branding_Type__c.field-meta.xml
<CustomField>
    <fullName>Branding_Type__c</fullName>
    <label>Branding Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Shop</fullName>
            </value>
            <value>
                <fullName>Outshop</fullName>
            </value>
            <value>
                <fullName>Full Shop</fullName>
            </value>
            <value>
                <fullName>Recce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>