Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Call_Center_Comments__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Comments__c</fullName>
    <label>Call Center Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>