Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Call_Center_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Feedback__c</fullName>
    <label>Call Center Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partial Activation</fullName>
            </value>
            <value>
                <fullName>Improper Size</fullName>
            </value>
            <value>
                <fullName>Improper Installation</fullName>
            </value>
            <value>
                <fullName>Mistake in Content</fullName>
            </value>
            <value>
                <fullName>Could not connect to Dealer/Shop Owner</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Satisfactory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>