Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <description>Cluster from the page selected from Branding request.</description>
    <label>Cluster</label>
    <length>255</length>
    <type>Text</type>
</CustomField>