Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Escalated_To_Branding_Head__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To_Branding_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the Branding Requests are not processed by RBM then its escalated to Branding Head</description>
    <label>Escalated To Branding Head</label>
    <type>Checkbox</type>
</CustomField>