Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Head_Branding__c.field-meta.xml
<CustomField>
    <fullName>Head_Branding__c</fullName>
    <label>Head Branding</label>
    <type>Email</type>
</CustomField>