Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Media_Type__c.field-meta.xml
<CustomField>
    <fullName>Media_Type__c</fullName>
    <description>field from Branding Request</description>
    <label>Media Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>