Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Metro_Non_Metro__c.field-meta.xml
<CustomField>
    <fullName>Metro_Non_Metro__c</fullName>
    <label>Metro/Non-Metro</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metro</fullName>
            </value>
            <value>
                <fullName>Non Metro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>