Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/RBM__c.field-meta.xml
<CustomField>
    <fullName>RBM__c</fullName>
    <formula>CASESAFEID(Submitted_By__r.Branding_Team_Member__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RBM</label>
    <type>Text</type>
</CustomField>