Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/RBM_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>RBM_Approval_Date__c</fullName>
    <label>RBM Approval Date</label>
    <type>Date</type>
</CustomField>