Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/RBM_Name__c.field-meta.xml
<CustomField>
    <fullName>RBM_Name__c</fullName>
    <formula>Submitted_By__r.Branding_Team_Member__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RBM Name</label>
    <type>Text</type>
</CustomField>