Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/RejectComment__c.field-meta.xml
<CustomField>
    <fullName>RejectComment__c</fullName>
    <label>RejectComment</label>
    <type>TextArea</type>
</CustomField>