Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Request_completed_date__c.field-meta.xml
<CustomField>
    <fullName>Request_completed_date__c</fullName>
    <inlineHelpText>Date of completion of branding request cycle</inlineHelpText>
    <label>Request completed date</label>
    <type>Date</type>
</CustomField>