Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Shop_Description__c.field-meta.xml
<CustomField>
    <fullName>Shop_Description__c</fullName>
    <label>Shop Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal Dealer</fullName>
            </value>
            <value>
                <fullName>Ashirvad Exclusive Dealer</fullName>
            </value>
            <value>
                <fullName>High Visibility Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>