Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Shop_mobile_number__c.field-meta.xml
<CustomField>
    <fullName>Shop_mobile_number__c</fullName>
    <description>Used in email templates</description>
    <formula>Shop_Name__r.Contact_Number_Mobile__c</formula>
    <label>Shop mobile number</label>
    <type>Text</type>
</CustomField>