Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Shop_Type__c.field-meta.xml
<CustomField>
    <fullName>Shop_Type__c</fullName>
    <label>Shop Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Dealer</fullName>
            </value>
            <value>
                <fullName>Existing Dealer</fullName>
            </value>
            <value>
                <fullName>Repair/Rework Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>