Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/SMS_Sent__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Sent</label>
    <type>Checkbox</type>
</CustomField>