Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Submit_For_Aprroval_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_For_Aprroval_Date__c</fullName>
    <description>Submitted for approval</description>
    <label>Submit For Aprroval Date</label>
    <type>Date</type>
</CustomField>