Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Team_Leader__c.field-meta.xml
<CustomField>
    <fullName>Team_Leader__c</fullName>
    <formula>$User.Team_Lead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Leader</label>
    <type>Text</type>
</CustomField>