Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Dealer Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>