Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/User1__c.field-meta.xml
<CustomField>
    <fullName>User1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>