Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Vendor_Account__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Branding Requests (Vendor Account)</relationshipLabel>
    <relationshipName>Branding_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>