Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Vendor_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Code__c</fullName>
    <formula>IF(ISBLANK(Vendor_Account__c),User1__r.Vendor_Code__c, Vendor_Account__r.SAP_Vendor_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Code</label>
    <type>Text</type>
</CustomField>