Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Vendor_Details__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Details</label>
    <referenceTo>Vendor_Details__c</referenceTo>
    <relationshipLabel>Branding Requests (Vendor Details)</relationshipLabel>
    <relationshipName>Branding_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>