Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Vendor_Fee__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Vendor Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>