Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Vendor_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Submitted_Date__c</fullName>
    <label>Vendor Submitted Date</label>
    <type>Date</type>
</CustomField>