Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/fields/Vertical_type__c.field-meta.xml
<CustomField>
    <fullName>Vertical_type__c</fullName>
    <formula>TEXT( CreatedBy.Vertical_Type__c )</formula>
    <label>Vertical type</label>
    <type>Text</type>
</CustomField>