Partial_14Dec2021/force-app/main/default/objects/Branding_Request__c/recordTypes/Branding_Request.recordType-meta.xml
<RecordType>
    <fullName>Branding_Request</fullName>
    <active>true</active>
    <label>Branding Request</label>
</RecordType>